# dm-ollamalib

./: .pylintrc  README.md  pyproject.toml
.github/workflows/: pylint.yml
src/dm_ollamalib/: __init__.py  optionhelper.py
