[project]
name = "dm-ollamalib"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ollama>=0.4.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pylint>=3.3.3",
    "pytest-cov>=6.0.0",
    "pytest>=8.3.4",
    "rich>=13.9.4",
    "pre-commit>=4.1.0",
]
